logs/scheduler/2022-07-05/.~c9_invoke_7RnDft.py.log
[2022-07-05 06:49:04,744] {processor.py:153} INFO - Started process (PID=7021) to work on /opt/airflow/dags/.~c9_invoke_7RnDft.py
[2022-07-05 06:49:04,745] {processor.py:641} INFO - Processing file /opt/airflow/dags/.~c9_invoke_7RnDft.py for tasks to queue
[2022-07-05 06:49:04,746] {logging_mixin.py:115} INFO - [2022-07-05 06:49:04,745] {dagbag.py:507} INFO - Filling up the DagBag from /opt/airflow/dags/.~c9_invoke_7RnDft.py
[2022-07-05 06:49:04,760] {logging_mixin.py:115} INFO - [2022-07-05 06:49:04,747] {dagbag.py:320} ERROR - Failed to import: /opt/airflow/dags/.~c9_invoke_7RnDft.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/.~c9_invoke_7RnDft.py", line 62
    branch_c = DummyOperator(
                            ^
IndentationError: unindent does not match any outer indentation level
[2022-07-05 06:49:04,761] {processor.py:653} WARNING - No viable dags retrieved from /opt/airflow/dags/.~c9_invoke_7RnDft.py
[2022-07-05 06:49:04,816] {processor.py:161} INFO - Processing /opt/airflow/dags/.~c9_invoke_7RnDft.py took 0.095 seconds
